--- a/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms.Android/FontesCustomizaveisXamarinForms.Android.csproj
+++ b/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms.Android/FontesCustomizaveisXamarinForms.Android.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\SedgwickAveDisplay-Regular.ttf" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
