--- a/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms.UWP/FontesCustomizaveisXamarinForms.UWP.csproj
+++ b/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms.UWP/FontesCustomizaveisXamarinForms.UWP.csproj
@@ -90,6 +90,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Assets\SedgwickAveDisplay-Regular.ttf" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
