--- a/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms.UWP/project.json
+++ b/FontesCustomizaveisXamarinForms/FontesCustomizaveisXamarinForms.UWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    //"Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Xamarin.Forms": "2.4.0.280"
   },
   "frameworks": {
